PROJECT( agros_swig )
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

# Find includes in corresponding build directories
set(CMAKE_INCLUDE_CURRENT_DIR ON)
# Instruct CMake to run moc automatically when needed.
set(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Svg REQUIRED)
FIND_PACKAGE(Qt5Network REQUIRED)
FIND_PACKAGE(Qt5Xml REQUIRED)
FIND_PACKAGE(Qt5XmlPatterns REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/../../agros-library)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/../../3rdparty)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/../../dealii/include/)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/../../dealii/build/include/)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/../../dealii/bundled/boost-1.62.0/include/)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/../../dealii/bundled/umfpack/UMFPACK/Include/)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/../../dealii/bundled/umfpack/AMD/Include/)

FIND_LIBRARY(AGROS_LIBRARY NAMES agros_library PATHS ${CMAKE_HOME_DIRECTORY}/../../libs)

FIND_PACKAGE(SWIG 3.0.11 REQUIRED)
INCLUDE(${SWIG_USE_FILE})

ADD_SUBDIRECTORY(python)
ADD_SUBDIRECTORY(octave)
ADD_SUBDIRECTORY(matlab)
ADD_SUBDIRECTORY(java)
#ADD_SUBDIRECTORY(csharp)
#ADD_SUBDIRECTORY(javascript)
